# PubMed_Aganitha

./: README.md
get_papers_list/: README.md  pyproject.toml
get_papers_list/src/get_papers_list/: cli.py
get_papers_list/src/get_papers_list/pubmed_fetcher/: client.py  models.py  processor.py
