[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A tool to fetch PubMed ppaers with pharmaceutical/biotech affliation"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"
pydantic = "^2.0"
lxml = "^4.9.3"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
ruff = "^0.0.286"

[tool.poetry]
packages = [{include = "get_papers_list", from = "src"}]

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
